# video_test

./: CMakeLists.txt  build.sh  main.qml
cmake/: clang.cmake
